--- a/index.css
+++ b/index.css
@@ -107,7 +107,7 @@
     transform: scale(1.1,1.1);
     
 }
-.tileContainer1:hover{
+.tileContainer:hover{
   /*transform: rotate(0deg)*/
   transform: scale(1.1,1.1);
   
